Fix border-top on accordion to not be removed with wrapping div

--- a/src/definitions/modules/accordion.less
+++ b/src/definitions/modules/accordion.less
@@ -130,8 +130,8 @@
   border-top: @styledTitleBorder;
   transition: @styledTitleTransition;
 }
-.ui.styled.accordion .title:first-child,
-.ui.styled.accordion .accordion .title:first-child {
+.ui.styled.accordion > .title:first-child,
+.ui.styled.accordion > .accordion .title:first-child {
   border-top: none;
 }
 
